# question_maker

./: .gitignore  EXPORT_LOCATION_FEATURE.md  GUI_IMPLEMENTATION_SUMMARY.md  MULTIPLE_CHOICE_FEATURE.md  README.md  gui_app.py  pyproject.toml  run_gui.bat  run_gui.py
.github/: copilot-instructions.md
examples/: FILE_PROCESSING_DEMO_README.md  basic_usage.py  export_location_demo.py  file_processing_demo.py  gui_features_demo.py  multiple_choice_demo.py  test_gui_backend.py  test_user_text.py
examples/inputs/: AA-metabolism.txt
examples/outputs/: AA-metabolism_questions_20251001_072247.csv  AA-metabolism_questions_simple_20251001_072247.txt  AA-metabolism_results_20251001_072247.json  AA-metabolism_summary_20251001_072247.txt
question_maker/: __init__.py  data_models.py  input_handlers.py  text_transformer.py
tests/: test_data_models.py  test_input_handlers.py  test_multiple_choice.py  test_text_transformer.py
